src/objects/Mitigation_FMS__c.object
<CustomObject>
    <fields>
        <fullName>Risk_control__c</fullName>
        <label>Risk control</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Verification_of_Effectiveness__c</fullName>
        <label>Verification of Effectiveness</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Verification_of_Implementation__c</fullName>
        <label>Verification of Implementation</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Mitigation</label>
    <listViews>
        <fullName>Physicians_Insurance_A_Mutual_Company</fullName>
        <columns>NAME</columns>
        <columns>Risk_control__c</columns>
        <filterScope>Everything</filterScope>
        <label>Physicians Insurance A Mutual Company</label>
    </listViews>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Mitigation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mitigations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>